# mainrun

./: .gitignore  Taskfile.yml  report.md
inference/: .gitignore  Cargo.toml  README.md
inference/bench/: compare.py
inference/export/: export.py
inference/src/: cache.rs  config.rs  constants.rs  main.rs  math.rs  model.rs  sample.rs  tokenizer.rs
mainrun/: analyse_data.py  bench.py  critic.py  eval_critic.py  experiments.py  plots.py  sample.py  sweep.py  train.py
mainrun/model/: config.py  gpt.py  gpt_v2.py  load.py  muon.py  optimizer.py  tokenizer.py
results/: vocab_qualitative_analysis.json
sweeps/0_baseline/: results.json
sweeps/0_baseline/a9dfc13-vocab_size16k-d512_20260617-104106_valloss1.7803/: config.json
sweeps/10_attn/: results.json
sweeps/10_attn/35b9f83-attn_typedifferential-d384_valloss1.1913/: config.json
sweeps/10_attn/35b9f83-attn_typemha-d384_valloss1.1870/: config.json
sweeps/10_attn/35b9f83-attn_typeoutput_gated-d384_valloss1.1814/: config.json
sweeps/10_attn/35b9f83-attn_typesingle_head-d384_valloss1.1898/: config.json
sweeps/11_residual/: results.json
sweeps/12_attn_temp/: results.json
sweeps/13_rdrop_size/: results.json
sweeps/14_rollback/: results.json
sweeps/15_muon_wd/: results.json
sweeps/1_optim/: results.json
sweeps/2_wsd_decay/: results.json
sweeps/3_arch/: results.json
sweeps/4_tokenizer/: results.json
sweeps/5_shape/: results.json
sweeps/6_masking/: results.json  visualise.py
sweeps/7_tokens_per_step/: results.json
sweeps/8_block/: results.json
sweeps/9_reg/: results.json
(+127 files in other folders)
