[package]
name = "inference"
version = "0.1.0"
edition = "2024"

[dependencies]
# weight loading: model.safetensors is mmap'd and parsed zero-copy
safetensors = "0.4"
memmap2 = "0.9"
# meta.json (the model shape, exported alongside the weights)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# exact erf, so GELU matches torch's nn.GELU() default (tanh approx drifts ~1e-3)
libm = "0.2"
# loads the exact tokenizer.json used at train time (encode/decode parity)
tokenizers = "0.20"
# the CLI
clap = { version = "4", features = ["derive"] }
# data-parallel matvec across output rows
rayon = "1"

# inference here is memory-bound, not compute-bound, but -O still helps the matvecs
[profile.release]
opt-level = 3
lto = true
